--- a/Assignment1.html
+++ b/Assignment1.html
@@ -5,8 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Donate Plan</title>
+    <link rel="stylesheet" href="style.css">
 </head>
- <h1>Helping everyone, With everyone.</h1>
+<div class="first-part">
+    <div id="first-part2">
+        <h1>Helping everyone, With everyone.</h1>
+    <p> This is an unprecedented time, a time where due to the spread of COVID-19 countries have taken measures like movement control orders, or even total lockdowns to contain the virus and the people are worried for the unforeseen future.
+   
+    </p>
+    <span>
+        <input type="button" class="text-btn" value="DONATE NOW">
+    </span>
+    </div>
+</div>
 <body>
     
 </body>
